# orchestra

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml
config/: limits.yml  quality.yml  routing.yml
config/agents/: antigravity.yml  claude.yml  codex.yml  mimo.yml  opencode.yml
hooks/: install-claude-hook.py  orchestra-session-start.sh
skills/orchestrate/: SKILL.md
src/orchestra/: __init__.py  agent.py  cli.py  config.py  executor.py  logging_setup.py  models.py  quality.py  router.py  state.py
tests/: conftest.py  test_orchestra.py
